# cosmic-desktop-widget

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_QUALITY.md  COMPLETE_PACKAGE.md  Cargo.toml  GITHUB_ISSUES.md  LAYER_SHELL_GUIDE.md  PROJECT_COMPLETE.md  README.md  TESTING_STRATEGY.md  calendar_widget_example.toml  config.toml.example  flake.nix  justfile  test_config_reload.sh
benches/: performance.rs
data/: com.github.olafkfreund.CosmicDesktopWidget.Settings.desktop
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONFIG_HOT_RELOAD.md  INTERACTION_IMPLEMENTATION.md  WIDGETS.md
docs/skills/: layer_shell_skill.md  wayland_rendering_skill.md  widget_development_skill.md
examples/: config-stocks.toml
scripts/: install.sh
src/: config_watcher.rs  error.rs  lib.rs  main.rs  panel.rs  position.rs  surface.rs
src/audio/: mod.rs  player.rs  stub.rs
src/config/: migration.rs  mod.rs
src/icons/: mod.rs
src/input/: mod.rs
src/layout/: mod.rs
src/metrics/: mod.rs
src/render/: mod.rs
src/text/: font.rs  glyph_cache.rs  mod.rs  renderer.rs
src/theme/: mod.rs
src/update/: mod.rs
src/wayland/: mod.rs
src/weather/: mod.rs
src/widget/: battery.rs  calendar.rs  countdown.rs  crypto.rs  mod.rs  mpris.rs  news.rs  pomodoro.rs  quotes.rs  registry.rs  stocks.rs  system_monitor.rs  traits.rs
tests/: icon_integration_test.rs  integration_tests.rs  interaction_test.rs
