[package]
name = "cosmic-desktop-widget"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["olafkfreund <olafkfreund@users.noreply.github.com>"]
description = "Desktop widgets using Wayland Layer Shell for COSMIC Desktop"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/cosmic-desktop-widget"
homepage = "https://github.com/olafkfreund/cosmic-desktop-widget"
documentation = "https://github.com/olafkfreund/cosmic-desktop-widget#readme"
readme = "README.md"
keywords = ["wayland", "layer-shell", "cosmic", "desktop-widget", "rust"]
categories = ["gui"]

[dependencies]
# Wayland Layer Shell support
smithay-client-toolkit = { version = "0.18", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

# Event loop
calloop = { version = "0.12", features = ["signals"] }

# Rendering
tiny-skia = "0.11"
fontdue = "0.9"

# Image handling
image = { version = "0.24", default-features = false, features = ["png"] }

# Shared memory for Wayland buffers
memmap2 = "0.9"
rustix = { version = "0.38", features = ["shm"] }

# Weather API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["clock"] }

# Async runtime
tokio = { version = "1", features = ["rt", "time", "macros"] }

# Configuration
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "cosmic_desktop_widget"
path = "src/lib.rs"

[[bin]]
name = "cosmic-desktop-widget"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
