[package]
name = "cosmic-desktop-widget"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["olafkfreund <olafkfreund@users.noreply.github.com>"]
description = "Desktop widgets using Wayland Layer Shell for COSMIC Desktop"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/cosmic-desktop-widget"
homepage = "https://github.com/olafkfreund/cosmic-desktop-widget"
documentation = "https://github.com/olafkfreund/cosmic-desktop-widget#readme"
readme = "README.md"
keywords = ["wayland", "layer-shell", "cosmic", "desktop-widget", "rust"]
categories = ["gui"]

[dependencies]
# Wayland Layer Shell support
smithay-client-toolkit = { version = "0.18", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

# Event loop
calloop = { version = "0.12", features = ["signals"] }

# Rendering
tiny-skia = "0.11"
fontdue = "0.9"

# Image handling
image = { version = "0.24", default-features = false, features = ["png"] }

# Shared memory for Wayland buffers
memmap2 = "0.9"
rustix = { version = "0.38", features = ["shm"] }

# Weather API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["clock"] }

# Async runtime
tokio = { version = "1", features = ["rt", "time", "macros"] }

# Configuration
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# System information (for System Monitor widget)
sysinfo = "0.30"

# Random number generation (for Quotes widget)
rand = "0.8"

# Calendar parsing (for Calendar widget)
icalendar = "0.16"

# RSS feed parsing (for News widget)
rss = "2.0"

# D-Bus for MPRIS (media player control)
zbus = { version = "4.0", default-features = false, features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
resvg = "0.37"
usvg = "0.37"

# Configuration file watching
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# libcosmic for configuration GUI
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["tokio", "winit", "wgpu"], optional = true }
once_cell = { version = "1", optional = true }

[features]
default = []
gui = ["libcosmic", "once_cell"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lib]
name = "cosmic_desktop_widget"
path = "src/lib.rs"

[[bin]]
name = "cosmic-desktop-widget"
path = "src/main.rs"

[[bin]]
name = "cosmic-desktop-widget-config"
path = "src/bin/config_gui.rs"
required-features = ["gui"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Benchmark configuration
[[bench]]
name = "performance"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
